reorganized templates and filters to allow for CV templates to be used

--- a/tex/Lectures.tex
+++ b/tex/Lectures.tex
@@ -1,12 +1,12 @@
 % UC Bio-bib Lectures Table
-% Created on 2018-10-17 21:09
+% Created on 2019-11-19 10:42
 
 \begin{longtable}{lp{10.0cm}p{4.5cm}}
 Month/Year & Title & Meeting/Place\\
 \hline 
 \endhead 
-10/2017 & Seminar Speaker, Department of Plant Sciences Seminar & University of California, Riverside \\
-4/2018 & Invited Speaker, Workshop on Spatial Pattern Formation in Ecosystems & Princeton University, Center for Theoretical Science \\
-8/2018 & Instructor, Coupled Natural-Human Systems Short Course & University of California, Irvine \\
+8/2018 & Session on ``Vegetation dynamics and ecosystem resilience under global climate change'', Ecological Society of America Annual Meeting, New Orleans, LA \\
+8/2018 & Coupled Natural-Human Systems Short Course, University of California, Irvine \\
+8/2019 & 44th New Phytologist Symposium, Accra, Ghana \\
 \end{longtable}
 
