--- a/tex/MESMProjects.tex
+++ b/tex/MESMProjects.tex
@@ -1,10 +1,12 @@
 % UC Bio-bib MESM Projects Table
-% Created on 2018-10-17 21:09
+% Created on 2019-11-19 10:42
 
 \begin{longtable}{p{1cm}p{2.5cm}p{3cm}p{2cm}p{2cm}p{2cm}p{2cm}}
 Year & Project Title & Students & Q3 & Q4 & Q5 & Q7\\
 \hline 
 \endhead 
-2017 - 2018 & MNHeadwaters & Sravan Chalasani , Karina Herrera, John Sisser, Zach Voss & 67\% Strongly Agree, 33\% Somewhat Agree & 67\% Excellent, 33\% Very Good & 67\% Always, 33\% Usually & 66\% Excellent, 33\% Satisfactory \\
+2019 - 2020 & Green infrastructure for coral reef protection in Hawaii' &  &  &  &  &  \\ 
+2018 - 2019 & Determining conservation research opportunities at the TNC Point Conception Dangermond Preserve & Brad Anderson,  &  &  &  &  \\ 
+2017 - 2018 & Determining conservation research opportunities at the TNC Point Conception Dangermond Preserve & Sravan Chalasani , Karina Herrera, John Sisser, Zach Voss & 67\% Strongly Agree, 33\% Somewhat Agree & 67\% Excellent, 33\% Very Good & 67\% Always, 33\% Usually & 66\% Excellent, 33\% Satisfactory \\ 
 \end{longtable}
 
