--- a/tex/PostdoctoralAdvising.tex
+++ b/tex/PostdoctoralAdvising.tex
@@ -1,10 +1,12 @@
 % UC Bio-bib Catalog Postdoctoral Advising Table
-% Created on 2018-10-17 21:09
+% Created on 2019-11-19 10:42
 
 \begin{longtable}{lp{1.5cm} p{3.5cm}p{4.5cm}}
 Postdoctoral Researcher & Years & Affiliation & Current Employment\\
 \hline 
 \endhead 
-Marc Mayes & 2016 -  & UCSB, Geography &   - \\
+Marc Mayes & 2016 -  & UCSB, Geography &  -   \\
+Farai Kaseke & 2018 -  & UCSB, Geography &  -   \\
 \end{longtable}
+
 
