--- a/tex/ProfessionalService.tex
+++ b/tex/ProfessionalService.tex
@@ -1,15 +1,10 @@
-% UC Bio-bib Professional Service Table
-% Created on 2018-10-17 21:09
+% UC Bio-bib Professional Generic Service Table
+% Created on 2019-11-19 10:42
 
-\begin{longtable}{lp{15cm}}
-Year & Service\\
+\begin{longtable}{llp{12cm}}
+Year & Role & Service\\
 \hline 
 \endhead 
-2014 - 2017 & Member, Hydrology Early Career Award Committee, American Geophysical Union \\
-2015 -  & Member, Editorial Board, Environmental Research Reviews, Environmental Research Letters \\
-2017 & Co-Convenor, AGU Fall Meeting, Session on ``Plant-Soil Interactions Rhizosphere: Experimental and Computational Advances'' \\
-2017 & Co-Convenor, AGU Fall Meeting, Session on ``Advances in Ecohydrology of Water-Stressed Environments'' \\
-2017 & Co-Convenor, International Association of Hydrological Sciences Conference, Session on ``Innovative ICT Tools for Water Management and Science'' \\
-2017 & Member, Academic Program Review Committee, School of Natural Resources and Environment, University of Arizona \\
+2018 & Co-Convenor & AGU Fall Meeting, Session on “Indicators of Plant Water Availability and Stress in Drought-Prone Forests at a Range of Spatial and Temporal Scales” \\
 \end{longtable}
 
