--- a/tex/Submitted.tex
+++ b/tex/Submitted.tex
@@ -1,17 +1,21 @@
-% UC Bio-bib Publications Submitted Table
-% Created on 2018-10-17 21:09
+% UC Bio-bib Publication Table
+% Created on 2019-11-19 10:42
 
 \begin{longtable}{lcp{7.75cm}>{\raggedright}p{5.25cm}p{1.75cm}}
 \# & Year & Title and Authors & Publisher & Category\\
 \hline 
 \endhead 
-C-1 & 2018 & {\bf Changes of daily evapotranspiration partitioning and  water use efficiency with a soil wetting-drying cycle in a sprinkle-irrigated cropland}, Xurong, M., Gong, D., Heng, L., Hsiao, T., Hao, W., Guo, Z., Li, Y, Caylor, K.K..  & \emph{ Science of the Total Environment } .   & Refereed Article\\
-C-2 & 2018 & {\bf Labor Sharing and Community-Level Vulnerability to Drought}, Schmitt-Harsh, M, Sweeney, S., Estes, L., Caylor, K.K., Evans, T..  & \emph{ World Development } .   & Refereed Article\\
-C-3 & 2018 & {\bf Mapping cropland in an smallholder-dominated African savannas biome using spectral mixture analysis and binary logistic regression}, Sweeney, S, Ruseva, T., Estes, L, Caylor, K.K., Evans, T..  & \emph{ Remote Sensing of Environment } .   & Refereed Article\\
-C-4 & 2018 & {\bf The Relative Influences of Climate and Crop Subsidies in Shaping Agricultural Land Use and Productivity}, Mastrorillo, M, Vink, N., Caylor. K., Oppenheimer, M., Estes, L..  & \emph{ Environmental Research Letters } .   & Refereed Article\\
-C-5 & 2018 & {\bf The salience of climate change in farmer decision making within smallholder semi-arid agroecosystems}, Waldman, K, Attari, S, Gower, D, Giroux, S, Evans, T, Caylor, K.K..  & \emph{ Climatic Change } .   & Refereed Article\\
-C-6 & 2018 & {\bf Perceptions and biases about climate variability in smallholder farming systems}, Waldman, K, Vergopolan, N., Attari, S.Z., Sheffiled, J., Estes, L.D., Caylor, K.K., Evans, T.P.  & \emph{ Weather \& Society } .   & Refereed Article\\
-C-7 & 2018 & {\bf A high-frequency mobile phone data collection approach for research in social-environmental systems: Applications in climate variability and food security in sub-Saharan Africa.}, Giroux, S., Caylor, K.K., Kouper, I., Estes, L., Schumacher, J., Waldman, K., Evans, T..  & \emph{ Environmental Modelling \& Software } .   & Refereed Article\\
-C-8 & 2018 & {\bf A global database of water vapor isotopes measured with high temporal resolution infrared laser spectroscopy}, Wei, Zhongwang, Lee, Xuhui, Aemisegger, Franziska, Benetti, Marion, Berkelhammer, Max, Casado, Mathieu, Caylor, K.K., Chrsiner, Emanuel, Dryoff, Christoph, Garcia, O.E., 17 others.  & \emph{ Scientific Data } .   & Refereed Article\\
+     & 2018 & {\bf Changes of daily evapotranspiration partitioning and  water use efficiency with a soil wetting-drying cycle in a sprinkle-irrigated cropland}, Xurong, M., Gong, D., Heng, L., Hsiao, T., Hao, W., Guo, Z., Li, Y, Caylor, K.K..  & \emph{ Science of the Total Environment } .   & Refereed Article\\
+     & 2018 & {\bf Labor Sharing and Community-Level Vulnerability to Drought}, Schmitt-Harsh, M, Sweeney, S., Estes, L., Caylor, K.K., Evans, T..  & \emph{ World Development } .   & Refereed Article\\
+     & 2018 & {\bf The Relative Influences of Climate and Crop Subsidies in Shaping Agricultural Land Use and Productivity}, Mastrorillo, M, Vink, N., Caylor. K.K., Oppenheimer, M., Estes, L..  & \emph{ Environmental Research Letters } .   & Refereed Article\\
+     & 2019 & {\bf Farmer Forecasts: Impacts of Seasonal Rainfall Expectations on Agricultural Decision-Making in Sub-Saharan Africa}, Guido, Z., Zimmer, A., Lopus, S., Hannah, C., Gower, D., Waldman, K., Krell, N., Sheffield, J., Caylor, K., Evans, T..  & \emph{ Global Environmental Change } .   & Refereed Article\\
+     & 2019 & {\bf Changing population and climate threaten irrigated African agriculture}, Lopus, S., Waldman, K., Guido, Z., Caylor, K.K., Evans, T..  & \emph{ Population and Development Review } .   & Refereed Article\\
+     & 2019 & {\bf Integrating Fine Root Morphology and Soil Distance Mapping to Characterize the Plant-Soil Interface }, DeCarlo, K., Caylor, K.K., Bilheux, H., Warren, J..  & \emph{ New Phytologist } .   & Refereed Article\\
+     & 2019 & {\bf Commodity sharing as risk-reducing strategy in smallholder agroecosystems}, Giroux, S., McCord, P, Lopus, S., Gower, D., Dell'Angelo, J., Caylor, K.K., Evans, T..  & \emph{ PLoS One } .   & Refereed Article\\
+     & 2019 & {\bf Object-Based Image Analysis framework for mapping vegetation physiognomic types at fine scales in Neotropical savannas}, Ribeiro, F., Roberts, D.A., Hess, L.L., Davis, F.W., Caylor, K.K., Daldegan, G.A.  & \emph{ Remote Sensing of Environment } .   & Refereed Article\\
+     & 2019 & {\bf Use of mobile phone services for agricultural decision-making in Kenya}, Krell, N.T., Girouz, S.A., Guido, Z.S., Hannah, C., Lopus, S.E., Caylor, K.K., Evans, T..  & \emph{ Climate \& Development } .   & Refereed Article\\
+     & 2019 & {\bf Accounting for training data error in machine learning applied to 
+Earth observations}, Elmes, A., Alemohammad, H., Avery, R., Caylor, K.K., Eastman, R, Fishgold, L., Friedl, M., Jain, M., Kohli, D., Laso-Bayas, J.C., Lunga, D., et. al.  & \emph{ Remote Sensing } .   & Refereed Article\\
+     & 2019 & {\bf Effects of crack morphology on soil carbon flux dynamics in a dryland vertisol}, DeCarlo, K., Caylor, K.K..  & \emph{ Geoderma } .   & Refereed Article\\
+     & 2019 & {\bf Elevation regulates the biophysical climate impacts of mountain deforestation}, Yang, L., Ziegler, A., Liu, Maofeng, Searchinger, T., Clais, P., Cai, Xitian, Pan, Ming, Peng, L., Lin, P., Gower, D., Sheffield, J., Caylor, K., Wood, E.F..  & \emph{ Nature Geoscience } .   & Refereed Article\\
 \end{longtable}
-
