--- a/tex/UniversityService.tex
+++ b/tex/UniversityService.tex
@@ -1,19 +1,23 @@
-% UC Bio-bib University Service Table
-% Created on 2018-10-17 21:09
+% UC Bio-bib Professional Generic Service Table
+% Created on 2019-11-19 10:42
 
-\begin{longtable}{lp{15cm}}
-Year & Service\\
+\begin{longtable}{llp{12cm}}
+Year & Role & Service\\
 \hline 
 \endhead 
-2016 - 2017 & Chair, Earth Research Institute, Personnel Committee \\
-2016 - 2017 & Ex-Officio Member, Earth Research Institute Advisory Committee, UCSB \\
-2016 - 2017  & Director, Earth Research Institute, University of California, Santa Barbara \\
-2017 - 2018 & Chair, Earth Research Institute, Personnel Committee \\
-2017 - 2018 & Chair, Environmental Data Science \& Informatics Faculty Search Committee, Earth Research Institute, UC Santa Barbara \\
-2017 - 2018 & Ex-Officio Member, Earth Research Institute Advisory Committee, UCSB \\
-2017 - 2018 & Member, North Campus Open Space Administrative Advisory Group \\
-2017 - 2018  & Director, Earth Research Institute, University of California, Santa Barbara \\
-2018 & Member, Data Science Working Group, UCSB \\
-2018 - 2019 & Participating Faculty, Interdepartmental PhD Emphasis in Environment and Society \\
+2018 - 2019 & Chair & Earth Research Institute, Personnel Committee \\
+2018 - 2019 & Director & Earth Research Institute, University of California, Santa Barbara \\
+2018 - 2019 & Ex-Officio Member & Earth Research Institute Advisory Committee, UCSB \\
+2018 - 2019 & Member & Campus Data Science Initiative Working Group \\
+2018 - 2019 & Member & North Campus Open Space Administrative Advisory Group \\
+2018 - 2019 & Member & Data Science Curriculum Committee \\
+2018 - 2019 & Participating Faculty & Interdepartmental PhD Emphasis in Environment and Society \\
+2019 - 2020 & Chair & Earth Research Institute, Personnel Committee \\
+2019 - 2020 & Ex-Officio Member & Earth Research Institute Advisory Committee, UCSB \\
+2019 - 2020 & Member & Dangermond Endowed Chair Search Committee, Office of Research \\
+2019 - 2020 & Member & North Campus Open Space Administrative Advisory Group \\
+2019 - 2020 & Member & Campus Data Science Initiative Working Group \\
+2019 - 2020 & Member & Data Science Curriculum Committee \\
+2019 - 2020 & Participating Faculty & Interdepartmental PhD Emphasis in Environment and Society \\
 \end{longtable}
 
