--- a/tex/Courses.tex
+++ b/tex/Courses.tex
@@ -1,26 +1,29 @@
 % UC Bio-bib Catalog Courses Table
-% Created on 2018-10-17 21:09
+% Created on 2019-11-19 10:42
 
 \begin{longtable}{lp{6.5cm}p{1cm}rrrp{2cm}}
 Qtr & Course & Class Type & Units & Hrs/Wk & Enrollment & ESCI/Written Evals Avail.\\
 \hline 
 \endhead 
-F16 & GEOG 597, Individual Study - PhD Exam & Tut &  & 2 & 1 & No/No \\
-W17 & GEOG 597, Individual Study - PhD Exam & Tut &  & 2 & 1 & No/No \\
-S17 & GEOG 167, Biogeography & Lec & 4.0 & 3 & 12 & Yes/Yes \\
-S17 & ENV S 167, Biogoegraphy & Lec & 4.0 & 3 & 17 & Yes/Yes \\
-S17 & ESM 401A, Group Project - A & Lec & 4.0 & 1 & 4 & No/No \\
-S17 & GEOG 597, Individual Study - PhD Exam & Tut &  & 2 & 2 & No/No \\
-S17 & GEOG 200C, Intro to Geographical Research & Tut & 2.0 & 1 & 1 & No/No \\
-F17 & ESM 401B, Group Project - B & Dis & 4.0 & 1 & 4 & No/No \\
-F17 & GEOG 597, Individual Study - PhD Exam & Tut &  & 2 & 2 & No/No \\
-W18 & ESM 401C , Group Project - C & Dis & 4.0 & 1 & 4 & No/No \\
-W18 & GEOG 597, Individual Study - PhD Exam & Tut &  & 2 & 1 & No/No \\
-W18 & GEOG 599, PhD Dissertation & Tut &  & 2 & 1 & No/No \\
-S18 & ESM 401A, Group Project - A & Lec & 4.0 & 1 & 5 & No/No \\
-S18 & ESM 401D, Group Project - D & Dis & 2.0 & 1 & 4 & No/No \\
-S18 & GEOG 597, Individual Study - PhD Exam & Tut &  & 2 & 1 & No/No \\
-S18 & GEOG 200C, Intro to Geographical Research & Tut & 2.0 & 1 & 1 & No/No \\
-S18 & GEOG 599, PhD Dissertation & Tut &  & 2 & 1 & No/No \\
+F16 & Individual Study - PhD Exam & Tut &  & 2 & 1.0 & No/No \\ 
+W17 & Individual Study - PhD Exam & Tut &  & 2 & 1.0 & No/No \\ 
+S17 & Biogeography & Lec & 4.0 & 3 & 12.0 & Yes/Yes \\ 
+S17 & Biogoegraphy & Lec & 4.0 & 3 & 17.0 & Yes/Yes \\ 
+S17 & Group Project - A & Lec & 4.0 & 1 & 4.0 & No/No \\ 
+S17 & Individual Study - PhD Exam & Tut &  & 2 & 2.0 & No/No \\ 
+S17 & Intro to Geographical Research & Tut & 2.0 & 1 & 1.0 & No/No \\ 
+F17 & Group Project - B & Dis & 4.0 & 1 & 4.0 & No/No \\ 
+F17 & Individual Study - PhD Exam & Tut &  & 2 & 2.0 & No/No \\ 
+W18 & Group Project - C & Dis & 4.0 & 1 & 4.0 & No/No \\ 
+W18 & Individual Study - PhD Exam & Tut &  & 2 & 1.0 & No/No \\ 
+W18 & PhD Dissertation & Tut &  & 2 & 1.0 & No/No \\ 
+S18 & Group Project - A & Lec & 4.0 & 1 & 5.0 & No/No \\ 
+S18 & Group Project - D & Dis & 2.0 & 1 & 4.0 & No/No \\ 
+S18 & Individual Study - PhD Exam & Tut &  & 2 & 1.0 & No/No \\ 
+S18 & Intro to Geographical Research & Tut & 2.0 & 1 & 1.0 & No/No \\ 
+S18 & PhD Dissertation & Tut &  & 2 & 1.0 & No/No \\ 
+F18 & Earth System Science & Lec & 4.0 & 1 & nan & Yes/Yes \\ 
+S19 & Water, Energy, and Ecosystems & Lec & 4.0 & 1 & nan & Yes/Yes \\ 
+ 
 \end{longtable}
 
