--- a/tex/DepartmentalService.tex
+++ b/tex/DepartmentalService.tex
@@ -1,13 +1,16 @@
-% UC Bio-bib Departmental Service Table
-% Created on 2018-10-17 21:09
+% UC Bio-bib Professional Generic Service Table
+% Created on 2019-11-19 10:42
 
-\begin{longtable}{lp{15cm}}
-Year & Service\\
+\begin{longtable}{llp{12cm}}
+Year & Role & Service\\
 \hline 
 \endhead 
-2016 - 2017 & Member, Land Surface Processes Faculty Search Committee, Dept. of Geography, UCSB \\
-2017 - 2018 & Member, Chair's Advisory Committee, Department of Geography, UCSB \\
-2017 - 2018 & Member, Graduate Admission Committee, Department of Geography, University of California, Santa Barbara \\
-2018 - 2019 & Member, Spatial Data Science Faculty Search Committee, Department of Geography, UCSB \\
+2018 - 2019 & Chair & Space Committee, Department of Geography, University of California, Santa Barbara \\
+2018 - 2019 & Member & Graduate Admission Committee, Department of Geography, University of California, Santa Barbara \\
+2018 - 2019 & Member & Vegetation Data Science Faculty Search Committee, Department of Geography, UCSB \\
+2019 - 2020 & Chair & Space Committee, Department of Geography, University of California, Santa Barbara \\
+2019 - 2020 & Member & Group Project Committee, Bren School of Environmental Science and Management, University of California, Santa Barbara \\
+2019 - 2020 & Member & Dangermond Endowed Chair Search Committee, Department of Geography \\
+2019 - 2020 & Member & Graduate Admission Committee, Department of Geography, University of California, Santa Barbara \\
 \end{longtable}
 
