--- a/tex/Reviews.tex
+++ b/tex/Reviews.tex
@@ -1,32 +1,22 @@
 % UC Bio-bib Reveiwer Activity Table
-% Created on 2018-10-17 21:09
+% Created on 2019-11-19 10:42
 
 \begin{longtable}{llp{12cm}}
 Year & Activity & Journal/Agency\\
 \hline 
 \endhead 
-2016 & Referee & Environmental Research Letters   \\
-2016 & Referee & Geophysical Research Letters  (2) \\
-2016 & Referee & NSF Hydrological Sciences   \\
-2017 & Program Director & Earth Research Institute Graduate Fellowship Program   \\
-2017 & Referee & Earth and Space Science   \\
-2017 & Referee & Environmental Research Letters  (4) \\
-2017 & Referee & Geophysical Research Letters   \\
-2017 & Referee & Nature Communications   \\
-2017 & Referee & Water Resources Research   \\
-2017 & Tenure case reviewer & Indiana University   \\
-2017 & Tenure case reviewer & University of Alabama   \\
-2017 & Tenure case reviewer & University of Cape Town   \\
-2018 & Program Director & Earth Research Institute Graduate Fellowship Program   \\
-2018 & Promotion case reviewer & University of Texas, Austin   \\
-2018 & Referee & Agricultural and Forest Meteorology   \\
-2018 & Referee & Environmental Research Letters  (2) \\
-2018 & Referee & Global and Planetary Change   \\
-2018 & Referee & JGR Biogeosciences   \\
-2018 & Referee & Journal of Water Resources Planning \& Management   \\
-2018 & Referee & Mountain Research and Development    \\
-2018 & Referee & NSF Hydrological Sciences   \\
-2018 & Referee & Nature Climate Change   \\
-2018 & Referee & PLOS One  (2) \\
+2018 & Promotion case reviewer & SUNY-ESF  \\
+2018 & Promotion case reviewer & University of Washington  \\
+2018 & Referee & Agricultural and Forest Meteorology  \\
+2018 & Referee & Biology Letters  \\
+2018 & Referee & Communications Biology  \\
+2018 & Referee & Journal of Water Resources Planning \& Management  \\
+2018 & Referee & Landscape Ecology  \\
+2018 & Referee & Nature Climate Change  (3)  \\
+2018 & Referee & Nature Communications  \\
+2018 & Referee & Progress in Physical Geography  \\
+2018 & Referee & Water Resources Research  \\
+2018 & Tenure case reviewer & University of Toronto  \\
+2019 & Referee & Water Resources Research  \\
 \end{longtable}
 
