Updates from Overleaf

--- a/biobib_kkc.tex
+++ b/biobib_kkc.tex
@@ -22,19 +22,18 @@
 \noindent
 \begin{tabularx}{\linewidth}{XX} 
 BIO-BIBLIOGRAPHY & \hfill University of California, Santa Barbara \\ \\
- & \hfill June 30, 2018 \\ \\
- Kelly K. Caylor &   \\ 
- Professor II & \\
- Department of Geography & \\
- Bren School of Environmental Science \& Management & \\
- Director of Earth Research Institute & 
+ & \hfill September 15th, 2020 \\ \\
+ Jennifer M. Jacobs &   \\ 
+ Assistant Professor II & \\
+ Department of Media Arts and Technology & \\
+ Director of the Expressive Computation Lab & 
  \end{tabularx}
 
 \vspace{1cm}
 % Last update filed on October 6, 2018
 
 This update refers to the period since appointment %July 1, 2016 
-to June 30, 2018
+to September 15th, 2020
 
 
 \vspace{1cm}
@@ -45,9 +44,14 @@ to June 30, 2018
 \vspace{0.5cm}
 \underline{Education}
 
-University of Virginia, Ph.D., Environmental Sciences, 2003
+University of Oregon, B.F.A. (honors), Digital Arts, 2007
 
-University of Virginia, B.A., with High Distinction, Environmental Sciences, 1996
+Hunter College, M.F.A., Integrated Media Arts, 2011
+
+Massachusetts Institute of Technology, M.S., Media Arts and Technology, 2013
+
+Massachusetts Institute of Technology, Ph. D., Media Arts and Technology, 2017
+
 
 \vspace{0.5cm}
 \underline{Area of Specialization}
