added make demonstration function

--- a/tex/Publications.tex
+++ b/tex/Publications.tex
@@ -1,11 +1,11 @@
 % UC Bio-bib Publication Table
-% Created on 2020-10-04 17:20
+% Created on 2020-10-04 17:24
 
 \begin{longtable}{lcp{7.75cm}>{\raggedright}p{5.25cm}p{1.75cm}}
 \# & Year & Title and Authors & Publisher & Category\\
 \hline 
 \endhead 
-    None
+    1 & 2012.0 & {\bf Codeable Objects}, Jacobs J., Buechley, L.. \href{nan}{[pdf]} & \emph{ Open Hardware Summit, Open Source Hardware Association } .   & Conference Demonstration\\
     2 & 2013.0 & {\bf Codeable Objects: Computational Design and Digital Fabrication for Novice Programmers}, Jacobs J., Buechley, L.. \href{nan}{[pdf]} & \emph{ ACM Conference on Human Factors in Computing Systems (CHI) } . doi:10.1145/2470654.2466211.  & Refereed Article\\
     3 & 2014.0 & {\bf DressCode: Supporting Youth in Computational Design and Making}, Jacobs J., Resnick, M., Buechley, L.. \href{nan}{[pdf]} & \emph{ Constructionism Conference  } .   & Refereed Article\\
 \\hline
