--- a/tex/Publications.tex
+++ b/tex/Publications.tex
@@ -1,5 +1,5 @@
 % UC Bio-bib Publication Table
-% Created on 2020-10-04 17:24
+% Created on 2020-10-04 22:12
 
 \begin{longtable}{lcp{7.75cm}>{\raggedright}p{5.25cm}p{1.75cm}}
 \# & Year & Title and Authors & Publisher & Category\\
@@ -8,6 +8,19 @@
     1 & 2012.0 & {\bf Codeable Objects}, Jacobs J., Buechley, L.. \href{nan}{[pdf]} & \emph{ Open Hardware Summit, Open Source Hardware Association } .   & Conference Demonstration\\
     2 & 2013.0 & {\bf Codeable Objects: Computational Design and Digital Fabrication for Novice Programmers}, Jacobs J., Buechley, L.. \href{nan}{[pdf]} & \emph{ ACM Conference on Human Factors in Computing Systems (CHI) } . doi:10.1145/2470654.2466211.  & Refereed Article\\
     3 & 2014.0 & {\bf DressCode: Supporting Youth in Computational Design and Making}, Jacobs J., Resnick, M., Buechley, L.. \href{nan}{[pdf]} & \emph{ Constructionism Conference  } .   & Refereed Article\\
+    4 & 2015.0 & {\bf Hybrid Practice in the Kalahari: Design Collaboration Through Digital Tools and Hunter Gatherer Craft}, Jacobs J., Zoran, A.. \href{nan}{[pdf]} & \emph{ ACM Conference on Human Factors in Computing Systems (CHI) } .   & Refereed Article\\
+    5 & 2015.0 & {\bf Hybrid Craft: Showcase of Physical and Digital Integration of Design and Craft Skills}, Zoran A., Valjakka, O., Chan,  B., Brosh, A. , Gordon,  R., Friedman, Y., Marshall,  J., Bunnell,  K., Jorgensen, T. , Factum Arte, Hope, S. , Schmitt, P. , Buechley, L. . \href{nan}{[pdf]} & \emph{  } .   & Refereed Article\\
+    6 & 2016.0 & {\bf Supporting creativity, expressiveness and complexity through personal fabrication. }, Jacobs J.. \href{nan}{[pdf]} & \emph{ XRDS: Crossroads, The ACM Magazine for Students } .   & Magazine Article\\
+    7 & 2016.0 & {\bf Negotiating science, technology, culture, and religion: the art and ideas of Laleh Mehran}, Jacobs J.. \href{nan}{[pdf]} & \emph{ XRDS: Crossroads, The ACM Magazine for Students } .   & Magazine Article\\
+    8 & 2016.0 & {\bf From prototype to product: deployment strategies in computer science research}, Jacobs J.. \href{nan}{[pdf]} & \emph{ XRDS: Crossroads, The ACM Magazine for Students } .   & Magazine Article\\
+    9 & 2017.0 & {\bf Supporting Expressive Procedural Art Creation through Direct Manipulation}, Jacobs J., S. Gogia, R. Měch, J. Brandt. \href{nan}{[pdf]} & \emph{ ACM Conference on Human Factors in Computing Systems (CHI) } .   & Refereed Article\\
+    10 & 2017.0 & {\bf Technology in defense of democracy}, Jacobs J.. \href{nan}{[pdf]} & \emph{  } . doi:10.1145/3055141.  & Magazine Article\\
+    11 & 2017.0 & {\bf Direct and immediate drawing with CNC machines}, Li. J, Jacobs J., Chang M., Hartmann B.. \href{nan}{[pdf]} & \emph{ ACM Symposium on Computational Fabrication } .   & Refereed Article\\
+    12 & 2017.0 & {\bf Multidisciplinary systems engineering }, Jacobs J.. \href{nan}{[pdf]} & \emph{ XRDS: Crossroads, The ACM Magazine for Students } .   & Magazine Article\\
+    13 & 2017.0 & {\bf Finding the edge: art and automation }, Jacobs J.. \href{nan}{[pdf]} & \emph{ XRDS: Crossroads, The ACM Magazine for Students } .   & Magazine Article\\
+    14 & 2018.0 & {\bf Dynamic Brushes: Extending Manual Drawing Practices with Artist-Centric Programming Tools}, Jacobs J., J. Brandt, R. Měch, M. Resnick. \href{nan}{[pdf]} & \emph{ ACM Conference on Human Factors in Computing Systems (CHI) } .   & Conference Demonstration\\
+    15 & 2018.0 & {\bf Extending Manual Drawing Practices with Artist-Centric Programming Tools}, Jacobs J., J. Brandt, R. Měch, M. Resnick. \href{nan}{[pdf]} & \emph{ ACM Conference on Human Factors in Computing Systems (CHI) } .   & Refereed Article\\
+    16 & 2019.0 & {\bf SK3TCH: Fast, Interactive 3D Printing via Liquid Crystallization}, Hirsch M., Jacobs J., Visell Y.. \href{nan}{[pdf]} & \emph{ ACM Symposium on Computational Fabrication } .   & Conference Abstract\\
 \\hline
 \\hline
    &   & {\bf Since Appointment:} &    &   \\\\
