update to intro

--- a/biobib_jj.tex
+++ b/biobib_jj.tex
@@ -56,27 +56,33 @@ Massachusetts Institute of Technology, Ph. D., Media Arts and Technology, 2017
 \vspace{0.5cm}
 \underline{Area of Specialization}
 
-Ecohydrology, Isotope hydrology, Coupled natural-human systems, Environmental sensing.
+Digital Fabrication
+
+Computational Design
+
+Human-Centered Programming
+
+Human-Computer Interaction
 
 \vspace{0.5cm}
 \underline{Previous Academic or Professional Appointments}
 \begin{tabular}{l p{5.5in} }
 
-2005 - 2007 \ \ \ \  & Assistant Professor, Department of Geography, Indiana University \\
-2007 - \ \ \ \ & Adjunct Faculty, Department of Geography, Indiana University \\ 
-2007 - 2012 \ \ \ \ & Assistant Professor, Dept. of Civil and Environmental Engineering, Princeton University \\
-2013 - 2016 & Affiliated Faculty, Dept. of Ecology and Evolutionary Biology, Princeton University \\
-2013 - 2016 & Associate Professor, Dept. of Civil and Environmental Engineering, Princeton University \\
-2014 - 2016 & Director, Environmental Studies Program, Princeton University \\
-2016 - \ \ \ \ & Full Professor, Dept. of Geography, University of California, Santa Barbara \\ 
-2016 - \ \ \ \ & Full Professor, Bren School of Environmental Science \& Management, UCSB \\ 
+2009 \ \ \ \  & Designer and Developer, Tiltfactor Game Research Lab, New York \\
+2009 - 2011\ \ \ \ & Adjunct Instructor, Film and Media Studies, Hunter College \\ 
+2011 - 2017 \ \ \ \ & Research Assistant, MIT Media Lab, Massachusetts Institute of Technology \\
+2014 - 2015 & Research Intern, Adobe Research, San Francisco\\
+2016 & Artist in Residence, Autodesk Pier 9, San Francisco \\
+2016 & Research Intern, Dynamic Medium Group, Human Advancement Research Community, Oakland \\
+2017 - 2019\ \ \ \ & Postdoctoral Fellow, Brown Institute For Media Innovation, Computer Science Department, Stanford University\\
+2019 - \ \ \ \ & Assistant Professor, Media Arts and Technology, University of California, Santa Barbara\\ 
 
 \end{tabular}
 
 \vspace{0.5cm}
 \underline{Professional Organizations}
 
-American Geophysical Union, Association of American Geographers, American Association for the Advancement of Science
+Member, Association for Computing Machinery (ACM) 
 
 \vspace{0.5cm}
 
