--- a/tex/InPress.tex
+++ b/tex/InPress.tex
@@ -1,8 +1,10 @@
 % UC Bio-bib Publication Table
-% Created on 2020-10-04 22:12
+% Created on 2020-10-05 14:51
 
 \begin{longtable}{lcp{7.75cm}>{\raggedright}p{5.25cm}p{1.75cm}}
 \# & Year & Title and Authors & Publisher & Category\\
 \hline 
 \endhead 
+    20 & 2020 & {\bf Experimenting with Robotic Softness.  }, Bourgault S., Forgues E., Jacobs J..  & \emph{ International Symposium on Electronic Art (ISEA) } .   & Refereed Article\\
+    21 & 2020 & {\bf Crosscast: Adding Visuals to Audio Travel Podcasts}, Xia H., Jacobs J., Agrawala M..  & \emph{ ACM Symposium on User Interface Software and Technology (UIST) } .   & Refereed Article\\
 \end{longtable}
