--- a/tex/Submitted.tex
+++ b/tex/Submitted.tex
@@ -1,8 +1,10 @@
 % UC Bio-bib Publication Table
-% Created on 2020-10-04 22:12
+% Created on 2020-10-05 14:51
 
 \begin{longtable}{lcp{7.75cm}>{\raggedright}p{5.25cm}p{1.75cm}}
 \# & Year & Title and Authors & Publisher & Category\\
 \hline 
 \endhead 
+    22 & 2020 & {\bf Remote Learners, Home Makers: How Digital Fabrication Was Taught Online During a Pandemic}, Benabdallah G., Bourgault S., Peek N., Jacobs J..  & \emph{ ACM Conference on Human Factors in Computing Systems (CHI) } .   & Refereed Article\\
+    23 & 2020 & {\bf What Visual Artists Can Teach Us About Software Development}, Li J., Hashim S., Jacobs J..  & \emph{ ACM Conference on Human Factors in Computing Systems (CHI) } .   & Refereed Article\\
 \end{longtable}
