Updates from Overleaf

--- a/biobib_jj.tex
+++ b/biobib_jj.tex
@@ -115,11 +115,10 @@ Member, Association for Computing Machinery (ACM)
 % For some reason, I need this for the list to appear...
 % {\tiny :}
 
-% %\vspace{0.15cm}
-% {\setlength{\extrarowheight}{3.5pt}
-% \input{tex/Submitted}
-% }
-None Provided.
+ %\vspace{0.15cm}
+ {\setlength{\extrarowheight}{3.5pt}
+\input{tex/Submitted}
+}
 
 
 \vspace{1cm}
