--- a/biobib_jj.tex
+++ b/biobib_jj.tex
@@ -8,6 +8,7 @@
 \usepackage{array}
 \usepackage[linkcolor=red,urlcolor=red]{hyperref}
 \usepackage[official]{eurosym}
+\usepackage[table]{xcolor}
 
 \setcounter{LTchunksize}{5}
 
