--- a/tex/Publications.tex
+++ b/tex/Publications.tex
@@ -21,9 +21,9 @@
     14 & 2018.0 & {\bf Dynamic Brushes: Extending Manual Drawing Practices with Artist-Centric Programming Tools}, Jacobs J., J. Brandt, R. Měch, M. Resnick.  & \emph{ ACM Conference on Human Factors in Computing Systems (CHI) } .   & Conference Demonstration\\
     15 & 2018 & {\bf Extending Manual Drawing Practices with Artist-Centric Programming Tools}, Jacobs J., J. Brandt, R. Měch, M. Resnick.  & \emph{ ACM Conference on Human Factors in Computing Systems (CHI) } .   & Refereed Article\\
     16 & 2019 & {\bf SK3TCH: Fast, Interactive 3D Printing via Liquid Crystallization}, Hirsch M., Jacobs J., Visell Y..  & \emph{ ACM Symposium on Computational Fabrication } .   & Conference Abstract\\
-\\hline
-\\hline
-   &   & {\bf Since Appointment:} &    &   \\\\
+\hline
+ \multicolumn{5}{l}{\bf \cellcolor{yellow!25}Current Review Period Begins Here, July 15th 2019 to September 15th 2020}\\
+   \hline  
     17 & 2019 & {\bf Editing Self Image}, Fried O., Jacobs J., Finkelstein A., Agrawala M. . \href{http://jenniferjacobs.mat.ucsb.edu/papers/editingselfimage2019.pdf}{[pdf]} & \emph{ Communications of the ACM (CACM) } .   & Refereed Article\\
     18 & 2020 & {\bf Supporting Visual Artists in Programming through Direct Inspection and Control of Program Execution}, Li, J., Brandt J., Měch R., Agrawala M. , Jacobs J.. \href{http://jenniferjacobs.mat.ucsb.edu/papers/ddb.pdf}{[pdf]} & \emph{ ACM Conference on Human Factors in Computing Systems (CHI) } .   & Refereed Article\\
     19 & 2020 & {\bf Learning Remotely, Making Locally: Teaching Digital Fabrication During a Pandemic}, Jacobs J., Peek N.. \href{https://interactions.acm.org/blog/view/learning-remotely-making-locally-remote-digital-fabrication-instruction-dur}{[pdf]} & \emph{ ACM Interactions } .   & Magazine Article\\
