--- a/biobib_jj.tex
+++ b/biobib_jj.tex
@@ -121,6 +121,14 @@ Member, Association for Computing Machinery (ACM)
 \input{tex/Submitted}
 }
 
+\vspace{0.2cm}
+{\bf Exhibitions and Performance:}
+
+ %\vspace{0.15cm}
+ {\setlength{\extrarowheight}{3.5pt}
+\input{tex/Exhibitions}
+}
+
 
 \vspace{1cm}
 \textbf{PART II.  TEACHING (50\% Geography Dept. workload; 50\% Bren School workload. Teaching release throughout the review period.)}
