added exhibition template

--- a/tex/Publications.tex
+++ b/tex/Publications.tex
@@ -1,5 +1,5 @@
 % UC Bio-bib Publication Table
-% Created on 2020-10-05 16:34
+% Created on 2020-10-05 18:50
 
 \begin{longtable}{lcp{7.75cm}>{\raggedright}p{5.25cm}p{1.75cm}}
 \# & Year & Title and Authors & Publisher & Category\\
@@ -9,7 +9,7 @@
     2 & 2013 & {\bf Codeable Objects: Computational Design and Digital Fabrication for Novice Programmers}, Jacobs J., Buechley L..  & \emph{ ACM Conference on Human Factors in Computing Systems (CHI) } . doi:10.1145/2470654.2466211.  & Refereed Article\\
     3 & 2014 & {\bf DressCode: Supporting Youth in Computational Design and Making}, Jacobs J., Resnick M., Buechley L..  & \emph{ Constructionism Conference  } .   & Refereed Article\\
     4 & 2015 & {\bf Hybrid Practice in the Kalahari: Design Collaboration Through Digital Tools and Hunter Gatherer Craft}, Jacobs J., Zoran  A..  & \emph{ ACM Conference on Human Factors in Computing Systems (CHI) } .   & Refereed Article\\
-    5 & 2015 & {\bf Hybrid Craft: Showcase of Physical and Digital Integration of Design and Craft Skills}, Zoran A., Valjakk O., Chan  B., Brosh A. , Gordon  R., Friedman, Y., Marshall,  J., Bunnell,  K., Jorgensen, T. , Factum Arte, Hope, S. , Schmitt, P. , Buechley, L. .  & \emph{  } .   & Refereed Article\\
+    5 & 2015 & {\bf Hybrid Craft: Showcase of Physical and Digital Integration of Design and Craft Skills}, Zoran A., Valjakk O., Chan  B., Brosh A. , Gordon  R., Friedman Y., Marshall  J., Bunnell  K., Jorgensen T. , Factum Arte, Hope S. , Schmitt P. , Buechley L. , Qi  J., Jacobs J..  & \emph{ Leonardo Journal, MIT Press } .   & Refereed Article\\
     6 & 2016 & {\bf Supporting creativity, expressiveness and complexity through personal fabrication. }, Jacobs J..  & \emph{ XRDS: Crossroads, The ACM Magazine for Students } .   & Magazine Article\\
     7 & 2016 & {\bf Negotiating science, technology, culture, and religion: the art and ideas of Laleh Mehran}, Jacobs J..  & \emph{ XRDS: Crossroads, The ACM Magazine for Students } .   & Magazine Article\\
     8 & 2016 & {\bf From prototype to product: deployment strategies in computer science research}, Jacobs J..  & \emph{ XRDS: Crossroads, The ACM Magazine for Students } .   & Magazine Article\\
@@ -21,6 +21,7 @@
     14 & 2018.0 & {\bf Dynamic Brushes: Extending Manual Drawing Practices with Artist-Centric Programming Tools}, Jacobs J., J. Brandt, R. Měch, M. Resnick.  & \emph{ ACM Conference on Human Factors in Computing Systems (CHI) } .   & Conference Demonstration\\
     15 & 2018 & {\bf Extending Manual Drawing Practices with Artist-Centric Programming Tools}, Jacobs J., J. Brandt, R. Měch, M. Resnick.  & \emph{ ACM Conference on Human Factors in Computing Systems (CHI) } .   & Refereed Article\\
     16 & 2019 & {\bf SK3TCH: Fast, Interactive 3D Printing via Liquid Crystallization}, Hirsch M., Jacobs J., Visell Y..  & \emph{ ACM Symposium on Computational Fabrication } .   & Conference Abstract\\
+
 \hline
  \multicolumn{5}{l}{\bf \cellcolor{yellow!25}Current Review Period Begins Here, July 15th 2019 to September 15th 2020}\\
    \hline  
