--- a/tex/Exhibitions.tex
+++ b/tex/Exhibitions.tex
@@ -1,30 +1,27 @@
-% UC Bio-bib Publication Table
-% Created on 2020-10-05 16:34
+% UC Bio-bib Exhibitions Table
+% Created on 2020-10-05 18:50
 
 \begin{longtable}{lcp{7.75cm}>{\raggedright}p{5.25cm}p{1.75cm}}
 \# & Year & Title and Authors & Publisher & Category\\
 \hline 
 \endhead 
-    1 & 2012.0 & {\bf Codeable Objects}, Jacobs J., Buechley, L..  & \emph{ Open Hardware Summit, Open Source Hardware Association } .   & Conference Demonstration\\
-    2 & 2013 & {\bf Codeable Objects: Computational Design and Digital Fabrication for Novice Programmers}, Jacobs J., Buechley L..  & \emph{ ACM Conference on Human Factors in Computing Systems (CHI) } . doi:10.1145/2470654.2466211.  & Refereed Article\\
-    3 & 2014 & {\bf DressCode: Supporting Youth in Computational Design and Making}, Jacobs J., Resnick M., Buechley L..  & \emph{ Constructionism Conference  } .   & Refereed Article\\
-    4 & 2015 & {\bf Hybrid Practice in the Kalahari: Design Collaboration Through Digital Tools and Hunter Gatherer Craft}, Jacobs J., Zoran  A..  & \emph{ ACM Conference on Human Factors in Computing Systems (CHI) } .   & Refereed Article\\
-    5 & 2015 & {\bf Hybrid Craft: Showcase of Physical and Digital Integration of Design and Craft Skills}, Zoran A., Valjakk O., Chan  B., Brosh A. , Gordon  R., Friedman, Y., Marshall,  J., Bunnell,  K., Jorgensen, T. , Factum Arte, Hope, S. , Schmitt, P. , Buechley, L. .  & \emph{  } .   & Refereed Article\\
-    6 & 2016 & {\bf Supporting creativity, expressiveness and complexity through personal fabrication. }, Jacobs J..  & \emph{ XRDS: Crossroads, The ACM Magazine for Students } .   & Magazine Article\\
-    7 & 2016 & {\bf Negotiating science, technology, culture, and religion: the art and ideas of Laleh Mehran}, Jacobs J..  & \emph{ XRDS: Crossroads, The ACM Magazine for Students } .   & Magazine Article\\
-    8 & 2016 & {\bf From prototype to product: deployment strategies in computer science research}, Jacobs J..  & \emph{ XRDS: Crossroads, The ACM Magazine for Students } .   & Magazine Article\\
-    9 & 2017 & {\bf Supporting Expressive Procedural Art Creation through Direct Manipulation}, Jacobs J., Gogia S., Měch R., Brandt J. .  & \emph{ ACM Conference on Human Factors in Computing Systems (CHI) } .   & Refereed Article\\
-    10 & 2017 & {\bf Technology in defense of democracy}, Jacobs J..  & \emph{  } . doi:10.1145/3055141.  & Magazine Article\\
-    11 & 2017 & {\bf Direct and immediate drawing with CNC machines}, Li. J, Jacobs J., Chang M., Hartmann B..  & \emph{ ACM Symposium on Computational Fabrication } .   & Refereed Article\\
-    12 & 2017 & {\bf Multidisciplinary systems engineering }, Jacobs J..  & \emph{ XRDS: Crossroads, The ACM Magazine for Students } .   & Magazine Article\\
-    13 & 2017 & {\bf Finding the edge: art and automation }, Jacobs J..  & \emph{ XRDS: Crossroads, The ACM Magazine for Students } .   & Magazine Article\\
-    14 & 2018.0 & {\bf Dynamic Brushes: Extending Manual Drawing Practices with Artist-Centric Programming Tools}, Jacobs J., J. Brandt, R. Měch, M. Resnick.  & \emph{ ACM Conference on Human Factors in Computing Systems (CHI) } .   & Conference Demonstration\\
-    15 & 2018 & {\bf Extending Manual Drawing Practices with Artist-Centric Programming Tools}, Jacobs J., J. Brandt, R. Měch, M. Resnick.  & \emph{ ACM Conference on Human Factors in Computing Systems (CHI) } .   & Refereed Article\\
-    16 & 2019 & {\bf SK3TCH: Fast, Interactive 3D Printing via Liquid Crystallization}, Hirsch M., Jacobs J., Visell Y..  & \emph{ ACM Symposium on Computational Fabrication } .   & Conference Abstract\\
+    1 & 2006 & {\bf Automaphile}, Jacobs J.. & \emph{ Laverne Krause Gallery }.  & Artwork and Exhibition\\
+    2 & 2007 & {\bf Selected Works from DARTS at the University of Oregon}, Jacobs J., Coleman C.. & \emph{ Lamar Dodd Gallery, Lamar Dodd School of Art,  University of Georgia }.  & Artwork and Exhibition\\
+    3 & 2007 & {\bf Contract}, Jacobs J., Samples S., Beyer D.. & \emph{ LumpWest Project Space }.  & Artwork and Performance\\
+    4 & 2007 & {\bf Perpetual Art Machine Video Art Portal Projection Installation}, Jacobs J.. & \emph{ Art Video Lounge, Art Basel Miami Beach, Botanical Gardens. }.  & Artwork and Exhibition\\
+    5 & 2007 & {\bf Teleculture}, Borkowski C., Fancher B., Förster G., Hrabowsky T., Jacobs J., Second Front, Tribe M., [dNASAb]. & \emph{ Pace University Digital Gallery }.  & Artwork and Exhibition\\
+    6 & 2009 & {\bf Surface Value}, Jacobs J.. & \emph{ Tractor Gallery, Portland }.  & Artwork and Exhibition\\
+    7 & 2009 & {\bf Sister Cities}, Jacobs J.. & \emph{ Blur + Sharpen Animation Festival, University of Southern California School of Cinematic Arts, Los Angeles  }.  & Animation\\
+    8 & 2009 & {\bf Formless in Context: A Study of Chaos and Discourse }, Group Show. & \emph{ Beta Spaces, Brooklyn }.  & Artwork and Exhibition\\
+    9 & 2010 & {\bf Glasshouse}, Jacobs J.. & \emph{ Tractor Gallery, Portland }.  & Artwork and Exhibition\\
+    10 & 2011 & {\bf Glasshouse Pixilerations}, Jacobs J.. & \emph{ FirstWorks Festival: Pixilerations, Rhode Island School of Design }.  & Artwork and Exhibition\\
+    11 & 2013 & {\bf High-Low Tech: Integration of Art and Technology}, Jacoby S., Qiu K. , Qi J., Jacobs J., Mellis D., Lovell E., Perner-Wilson H., Buechley L.. & \emph{ University Gallery at UMass, Lowell, Massachusetts }.  & Artwork and Exhibition\\
+    12 & 2015 & {\bf Hybrid Craft in the Kalahari}, Jacobs J.. & \emph{ Object Stories, Portland Art Museum, Portland }.  & Artwork and Exhibition\\
+    13 & 2015 & {\bf Hybrid Craft: Showcase of Physical and Digital Integration of Design and Craft Skills }, Zoran A., Valjakk O., Chan  B., Brosh A. , Gordon  R., Friedman Y., Marshall  J., Bunnell  K., Jorgensen T. , Factum Arte, Hope S. , Schmitt P. , Buechley L. , Qi  J., Jacobs J.. & \emph{ SIGGRAPH Art Gallery, Los Angeles, California  }.  & Artwork and Exhibition\\
+    14 & 2016 & {\bf Selections from Hybrid Craft in the Kalahari}, Jacobs J.. & \emph{ Alchemists of Our Time Exhibition, Ars Electronica, Linz,  }.  & Artwork and Exhibition\\
+    19 & 2016 & {\bf Pier 9 Residency Showcase}, Cheng C., Jacobs J., Jefferson E., Karadayi Y., Keener C., Kronick S., Mann S., McIndoe S., Mendoza N., Murray-Leslie A., Pender S., Ponitz J., Reed A., Shi T.. & \emph{ Autodesk Pier 9, San Francisco }.  & Artwork and Exhibition\\
+
 \hline
  \multicolumn{5}{l}{\bf \cellcolor{yellow!25}Current Review Period Begins Here, July 15th 2019 to September 15th 2020}\\
    \hline  
-    17 & 2019 & {\bf Editing Self Image}, Fried O., Jacobs J., Finkelstein A., Agrawala M. . \href{http://jenniferjacobs.mat.ucsb.edu/papers/editingselfimage2019.pdf}{[pdf]} & \emph{ Communications of the ACM (CACM) } .   & Refereed Article\\
-    18 & 2020 & {\bf Supporting Visual Artists in Programming through Direct Inspection and Control of Program Execution}, Li, J., Brandt J., Měch R., Agrawala M. , Jacobs J.. \href{http://jenniferjacobs.mat.ucsb.edu/papers/ddb.pdf}{[pdf]} & \emph{ ACM Conference on Human Factors in Computing Systems (CHI) } .   & Refereed Article\\
-    19 & 2020 & {\bf Learning Remotely, Making Locally: Teaching Digital Fabrication During a Pandemic}, Jacobs J., Peek N.. \href{https://interactions.acm.org/blog/view/learning-remotely-making-locally-remote-digital-fabrication-instruction-dur}{[pdf]} & \emph{ ACM Interactions } .   & Magazine Article\\
 \end{longtable}
