--- a/biobib_jj.tex
+++ b/biobib_jj.tex
@@ -9,6 +9,7 @@
 \usepackage[linkcolor=red,urlcolor=red]{hyperref}
 \usepackage[official]{eurosym}
 \usepackage[table]{xcolor}
+\usepackage{sectsty}
 
 \setcounter{LTchunksize}{5}
 
@@ -18,6 +19,16 @@
 \renewcommand{\headrulewidth}{0pt}
 
 
+\renewcommand{\thesection}{}
+\renewcommand{\thesubsection}{\arabic{section}.\arabic{subsection}}
+\makeatletter
+\def\@seccntformat#1{\csname #1ignore\expandafter\endcsname\csname the#1\endcsname\quad}
+\let\sectionignore\@gobbletwo
+\let\latex@numberline\numberline
+\def\numberline#1{\if\relax#1\relax\else\latex@numberline{#1}\fi}
+\makeatother
+\sectionfont{\fontsize{10}{15}\selectfont}
+\subsectionfont{\fontsize{10}{15}\selectfont}
 \begin{document}
 
 \noindent
@@ -89,10 +100,10 @@ Member, Association for Computing Machinery (ACM)
 
 \newpage
 
-\textbf{PART I.  RESEARCH}
+\section{\textbf{PART I.  RESEARCH}}
 
 \vspace{0.2cm}
-{\bf Cumulative List of Publications (or Creative Activities):}
+\subsection{{\bf Cumulative List of Publications:}}
 
 %\vspace{0.2cm}
 {\setlength{\extrarowheight}{3.5pt}
@@ -122,7 +133,7 @@ Member, Association for Computing Machinery (ACM)
 }
 
 \vspace{0.2cm}
-{\bf Exhibitions and Performance:}
+\subsection{{\bf Exhibitions and Performance:}}
 
  %\vspace{0.15cm}
  {\setlength{\extrarowheight}{3.5pt}
@@ -131,7 +142,7 @@ Member, Association for Computing Machinery (ACM)
 
 
 \vspace{1cm}
-\textbf{PART II.  TEACHING (50\% Geography Dept. workload; 50\% Bren School workload. Teaching release throughout the review period.)}
+\section*{\textbf{PART II.  TEACHING}}
 
 \vspace{0.5cm}
 
