fixed error in exhibition

--- a/tex/Exhibitions.tex
+++ b/tex/Exhibitions.tex
@@ -1,5 +1,5 @@
 % UC Bio-bib Exhibitions Table
-% Created on 2020-10-05 18:50
+% Created on 2020-10-05 19:27
 
 \begin{longtable}{lcp{7.75cm}>{\raggedright}p{5.25cm}p{1.75cm}}
 \# & Year & Title and Authors & Publisher & Category\\
@@ -19,9 +19,9 @@
     12 & 2015 & {\bf Hybrid Craft in the Kalahari}, Jacobs J.. & \emph{ Object Stories, Portland Art Museum, Portland }.  & Artwork and Exhibition\\
     13 & 2015 & {\bf Hybrid Craft: Showcase of Physical and Digital Integration of Design and Craft Skills }, Zoran A., Valjakk O., Chan  B., Brosh A. , Gordon  R., Friedman Y., Marshall  J., Bunnell  K., Jorgensen T. , Factum Arte, Hope S. , Schmitt P. , Buechley L. , Qi  J., Jacobs J.. & \emph{ SIGGRAPH Art Gallery, Los Angeles, California  }.  & Artwork and Exhibition\\
     14 & 2016 & {\bf Selections from Hybrid Craft in the Kalahari}, Jacobs J.. & \emph{ Alchemists of Our Time Exhibition, Ars Electronica, Linz,  }.  & Artwork and Exhibition\\
-    19 & 2016 & {\bf Pier 9 Residency Showcase}, Cheng C., Jacobs J., Jefferson E., Karadayi Y., Keener C., Kronick S., Mann S., McIndoe S., Mendoza N., Murray-Leslie A., Pender S., Ponitz J., Reed A., Shi T.. & \emph{ Autodesk Pier 9, San Francisco }.  & Artwork and Exhibition\\
+    15 & 2016 & {\bf Pier 9 Residency Showcase}, Cheng C., Jacobs J., Jefferson E., Karadayi Y., Keener C., Kronick S., Mann S., McIndoe S., Mendoza N., Murray-Leslie A., Pender S., Ponitz J., Reed A., Shi T.. & \emph{ Autodesk Pier 9, San Francisco }.  & Artwork and Exhibition\\
 
-\hline
- \multicolumn{5}{l}{\bf \cellcolor{yellow!25}Current Review Period Begins Here, July 15th 2019 to September 15th 2020}\\
-   \hline  
+%\hline
+ %\multicolumn{5}{l}{\bf \cellcolor{yellow!25}Current Review Period Begins Here, July 15th 2019 to September 15th 2020}\\
+%  \hline  
 \end{longtable}
