--- a/tex/Courses.tex
+++ b/tex/Courses.tex
@@ -1,29 +1,21 @@
 % UC Bio-bib Catalog Courses Table
-% Created on 2020-10-05 19:30
+% Created on 2020-10-11 20:58
 
 \begin{longtable}{lp{6.5cm}p{1cm}rrrp{2cm}}
-Qtr & Course & Class Type & Units & Hrs/Wk & Enrollment & ESCI/Written Evals Avail.\\
+Qtr & Course no., Title & New & Institution & Type & Units & Hrs/Wk & Enroll & Evals Avail. & Eval / (Dept Mean)\\
 \hline 
 \endhead 
-F16 & Individual Study - PhD Exam & Tut &  & 2 & 1.0 & No/No \\ 
-W17 & Individual Study - PhD Exam & Tut &  & 2 & 1.0 & No/No \\ 
-S17 & Biogeography & Lec & 4.0 & 3 & 12.0 & Yes/Yes \\ 
-S17 & Biogoegraphy & Lec & 4.0 & 3 & 17.0 & Yes/Yes \\ 
-S17 & Group Project - A & Lec & 4.0 & 1 & 4.0 & No/No \\ 
-S17 & Individual Study - PhD Exam & Tut &  & 2 & 2.0 & No/No \\ 
-S17 & Intro to Geographical Research & Tut & 2.0 & 1 & 1.0 & No/No \\ 
-F17 & Group Project - B & Dis & 4.0 & 1 & 4.0 & No/No \\ 
-F17 & Individual Study - PhD Exam & Tut &  & 2 & 2.0 & No/No \\ 
-W18 & Group Project - C & Dis & 4.0 & 1 & 4.0 & No/No \\ 
-W18 & Individual Study - PhD Exam & Tut &  & 2 & 1.0 & No/No \\ 
-W18 & PhD Dissertation & Tut &  & 2 & 1.0 & No/No \\ 
-S18 & Group Project - A & Lec & 4.0 & 1 & 5.0 & No/No \\ 
-S18 & Group Project - D & Dis & 2.0 & 1 & 4.0 & No/No \\ 
-S18 & Individual Study - PhD Exam & Tut &  & 2 & 1.0 & No/No \\ 
-S18 & Intro to Geographical Research & Tut & 2.0 & 1 & 1.0 & No/No \\ 
-S18 & PhD Dissertation & Tut &  & 2 & 1.0 & No/No \\ 
-F18 & Earth System Science & Lec & 4.0 & 1 & nan & Yes/Yes \\ 
-S19 & Water, Energy, and Ecosystems & Lec & 4.0 & 1 & nan & Yes/Yes \\ 
+F10 & Game Programming & Rev &  & Lecture/ Studio & 4 & 4.0 & 12 & / \\ 
+F10 & Understanding New Media & Rev &  & Lecture & 4 & 3.0 & 20 & / \\ 
+S11 & Understanding New Media & nan &  & Lecture & 4 & 4.0 & 25 & / \\ 
+F19 & Computational Systems for Visual Art and Design & New &  & Lecture/ Studio & 4 & 4.0 & 6 & / \\ 
+F19 & Directed Research & nan &  & nan & 4 & 1.0 & 1 & / \\ 
+W20 & Designing Creative Technologies & New &  & Lecture & 4 & 3.5 & 6 & / \\ 
+W20 & Directed Research & nan &  & nan & 4 & 1.0 & 3 & / \\ 
+S20 & Computational Fabricaton & New &  & Lecture/ Studio & 4 & 3.5 & 10 & / \\ 
+S20 & Directed Research & nan &  & nan & 4 & 1.0 & 2 & / \\ 
+S20 & Directed Research & nan &  & nan & 4 & 1.0 & 1 & / \\ 
+nan & (Cross-list) & nan &  & nan & 4 & 4.0 & 7 & / \\ 
  
 \end{longtable}
 
